# Foreman

./: .gitignore  README.md  docker-compose.yml  export_requirements.sh  pyproject.toml
automa/: __init__.py  main.py
automa/core/: errors.py  queue.py
automa/docs/messages/: acccount-request.json  account-response.json  example-request.json  example-submission.json  example-work-allocation.json
src/: requirements.txt
src/app/: __init__.py  library.py  main.py  queue.py
src/docs/messages/: example-network.json  example-request.json  example-submission.json  example-work-allocation.json
tests/: test_automa_node.py
