[tool.poetry]
name = "automa-node"
version = "0.1.0"
description = ""
authors = ["Cameron Sajedi <cameronsajedi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi-jsonrpc = "^0.2.6"
arq = "^0.19"
attrs = "^20.2.0"
loguru = "^0.5.3"
uvicorn = "^0.13.4"
dataset = "^1"
aioredis = "^2.0.1"
pydantic-aioredis = "^0.4.4"
redis = "^4.2.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.4"
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
